# bible_reference_parser

./: Cargo.toml  README.md
examples/: bible.rs  organizer.rs  overlapping.rs  structures.rs
src/: bible.rs  bible_organizer.rs  bible_verse_organizer.rs  book_chapter_verse.rs  book_manager.rs  book_segment.rs  compare.rs  lib.rs  main.rs  maps.rs  organizer.rs  overlap.rs  parse.rs  passage.rs  segment.rs  segments.rs
src/books/: book_chapter_verse_id.rs  book_data.rs  book_segment.rs  book_segments.rs  mod.rs  reference_parser.rs
src/books/data/: book_with_abbreviations.rs  mod.rs
src/managers/: README.md  bible_manager.rs  chapter_verse_organizer.rs  content.rs  media_manager.rs  mod.rs  parsable_reference.rs  segment_organizer.rs
src/passage/: mod.rs  parse_segments.rs  segments.rs
src/passage/segment/: any_segment.rs  individual_parse.rs  mod.rs  segment.rs
src/passage/segment/types/: chapter_range.rs  chapter_verse.rs  chapter_verse_range.rs  full_chapter.rs  full_chapter_range.rs  mod.rs
src/passage_segments/: chapter_range.rs  chapter_verse.rs  chapter_verse_range.rs  full_chapter.rs  full_chapter_range.rs  mod.rs  range_pair.rs
