[package]
name = "bible_reference_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["into_iterator"] }
itertools = "0.14.0"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
