[package]
name = "bible_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["into_iterator", "deref", "deref_mut", "into", "from", "display", "from_str", "as_ref"] }
itertools = "0.14.0"
numerals = "0.1.4"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
